--- a/social-media-app/src/components/rightBar/rightBar.scss
+++ b/social-media-app/src/components/rightBar/rightBar.scss
@@ -1,72 +1,95 @@
+@import "../../style.scss";
+
 .rightBar {
-    flex: 3;
-    position: sticky;
-    top: 70px;
-    height: calc(100vh - 70px);
-    overflow: scroll;
+    @include themify($themes) {
 
-    &::-webkit-scrollbar {
-        display: none;
-    }
+        flex: 3;
+        position: sticky;
+        top: 70px;
+        height: calc(100vh - 70px);
+        overflow: scroll;
+        background-color: themed("bgSoft");
 
-    .container {
+        &::-webkit-scrollbar {
+            display: none;
+        }
 
-        padding: 20px;
+        .container {
 
-        .item {
-
-            -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
-            -moz-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
-            box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
             padding: 20px;
 
+            .item {
 
-            span {
-                color: gray;
-            }
+                -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+                -moz-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+                box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+                padding: 20px;
+                margin-bottom: 20px;
+                background-color: themed("bg");
 
-            .user {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                margin: 20px 0px;
 
-                .userInfo {
-                    display: flex;
-                    align-items: center;
-                    gap: 20px;
-
-                    img {
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 50%;
-                        object-fit: cover;
-                    }
-
-                    span {
-                        font-weight: 500;
-                        color: black;
-                    }
-
+                span {
+                    color: gray;
                 }
 
-                .buttons {
+                .user {
                     display: flex;
                     align-items: center;
-                    gap: 10px;
+                    justify-content: space-between;
+                    margin: 20px 0px;
 
-                    button {
-                        border: none;
-                        padding: 5px;
-                        color: white;
-                        cursor: pointer;
+                    .userInfo {
+                        display: flex;
+                        align-items: center;
+                        gap: 20px;
+                        position: relative;
 
-                        &:first-child {
-                            background-color: #5271ff;
+                        img {
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            object-fit: cover;
                         }
 
-                        &:last-child {
-                            background-color: #f0544f;
+                        .online {
+                            width: 12px;
+                            height: 12px;
+                            border-radius: 50%;
+                            background-color: limegreen;
+                            position: absolute;
+                            top: 0;
+                            left: 30px;
+                        }
+
+                        p {
+                            color: themed("textColorsoft");
+                        }
+
+                        span {
+                            font-weight: 500;
+                            color: themed("textColor");
+                        }
+
+                    }
+
+                    .buttons {
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+
+                        button {
+                            border: none;
+                            padding: 5px;
+                            color: white;
+                            cursor: pointer;
+
+                            &:first-child {
+                                background-color: #5271ff;
+                            }
+
+                            &:last-child {
+                                background-color: #f0544f;
+                            }
                         }
                     }
                 }
