--- a/social-media-app/src/style.scss
+++ b/social-media-app/src/style.scss
@@ -3,14 +3,14 @@ $themes: (
         bg:white,
         logo:darkblue,
         bgSoft:#f6f3f3,
-        textColorsoft:#555,
+        textColorSoft:#555,
         border:lightgray,
     ),
     dark:(textColor:whitesmoke,
         bg:#222,
         logo:white,
         bgSoft:#333,
-        textColorsoft:lightgray,
+        textColorSoft:lightgray,
         border:#444,
     ),
 );
@@ -37,4 +37,16 @@ $themes: (
 
 @function themed($key) {
     @return map-get($theme-map, $key);
+}
+
+@mixin mobile {
+    @media (max-width:480px) {
+        @content;
+    }
+}
+
+@mixin tablet {
+    @media (max-width:960px) {
+        @content;
+    }
 }
