--- a/social-media-app/src/components/post/post.scss
+++ b/social-media-app/src/components/post/post.scss
@@ -17,6 +17,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                position: relative;
 
                 .userInfo {
                     display: flex;
@@ -44,22 +45,32 @@
                         }
                     }
 
-                    .content {
-                        margin: 20px 0px;
+                }
 
-                        img {
-                            width: 100%;
-                            max-height: 500px;
-                            object-fit: cover;
-                            margin-top: 20px;
+                button {
+                    position: absolute;
+                    top: 30px;
+                    right: 0;
+                    border: none;
+                    background-color: #f0544f;
+                    padding: 5px;
+                    cursor: pointer;
+                    color: white;
+                }
+            }
 
-                        }
+            .content {
+                margin: 20px 0px;
 
-
-                    }
-
+                img {
+                    width: 100%;
+                    max-height: 500px;
+                    object-fit: cover;
+                    margin-top: 20px;
 
                 }
+
+
             }
 
             .info {
